# barcode-simulation

./: Cargo.toml  Makefile  README.md
src/: barcode.rs  cli.yml  lib.rs  main.rs  pcr.rs
