[package]
name = "pcr-simulation"
version = "0.1.1"
authors = ["wenjie1991 <sunwjie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pcr"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[dependencies]
rand = "0.7.2"
twox-hash = "1.5.0"
clap = {version = "~2.27.0", features = ["yaml"]}
